package br.com.educavalcante.cinemanager.utils;

public enum Role {
    CLIENTE,
    ADMIN
}
